tests/tools/trip/randomTrips/errors/fringe_factor_invalid/options.tools
-n net.net.xml --fringe-factor foo
